--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
-<<<<<<< HEAD
   "name": "walter-farm-frontend",
-=======
-  "name": "lyx-progame-wf",
->>>>>>> 2566318 (fix: add TypeScript types for Vercel build)
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-<<<<<<< HEAD
     "start": "next start"
   },
   "dependencies": {
@@ -18,30 +13,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.14",
-    "postcss": "8.4.21",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
-=======
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "@prisma/client": "^7.0.1",
-    "next": "16.0.6",
-    "prisma": "^7.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.25",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.6",
-    "tailwindcss": "^4",
-    "typescript": "^5.9.3"
->>>>>>> 2566318 (fix: add TypeScript types for Vercel build)
+    "typescript": "^5.0.0",
+    "@types/react": "^18.0.0",
+    "@types/node": "^18.0.0"
   }
 }
