--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^7.0.1",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/react": "^18.0.0",
-    "@types/node": "^18.0.0"
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "prisma": "^7.0.1",
+    "typescript": "^5.0.0"
   }
 }
