--- a/package.json
+++ b/package.json
@@ -8,19 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^7.0.1",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^18.3.7",
-    "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
-    "prisma": "^7.0.1",
-    "typescript": "^5.0.0"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2",
+    "@types/react": "^18.0.38",
+    "@types/node": "^18.11.18"
   }
 }
