--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "walter-farm-frontend",
-  "version": "0.1.0",
+  "name": "walter-farm",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
+    "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "next-intl": "3.10.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2",
-    "@types/react": "^18.0.38",
-    "@types/node": "^18.11.18"
+    "autoprefixer": "10.4.14",
+    "postcss": "8.4.32",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.4.5",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.2.5"
   }
 }
