--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "next": "14.2.5",
+    "@prisma/client": "^7.1.0",
+    "dotenv": "^17.2.3",
+    "prisma": "^7.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "next-intl": "3.10.3"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.38",
     "autoprefixer": "10.4.14",
     "postcss": "8.4.32",
     "tailwindcss": "3.4.1",
