--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,12 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "prisma/config.ts"
+  ],
   "exclude": ["node_modules"]
 }
