--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
     "@prisma/client": "^7.1.0",
+    "@vercel/analytics": "^1.6.1",
     "dotenv": "^17.2.3",
+    "next": "14.2.5",
     "prisma": "^7.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "next-intl": "3.10.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.38",
     "autoprefixer": "10.4.14",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.2.5",
     "postcss": "8.4.32",
     "tailwindcss": "3.4.1",
-    "typescript": "5.4.5",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.2.5"
+    "typescript": "5.4.5"
   }
 }
