--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^3.0.3",
     "jose": "^6.1.3",
     "next": "14.2.5",
     "pg": "^8.16.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "resend": "^6.6.0",
+    "swr": "^2.3.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
+    "@types/json5": "^2.2.0",
     "@types/node": "24.10.1",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
