--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,8 @@ ADMIN_EMAIL="admin@example.com"
 ADMIN_PASSWORD="secure-password-here"
 
 # Email provider (例如 Resend，用到再开)
-# RESEND_API_KEY="your-resend-api-key"
-# RESEND_FROM_EMAIL="booking@walter-farm.com"
+ RESEND_API_KEY="your-resend-api-key"
+ RESEND_FROM_EMAIL="admin@example.com"
+
+ # Next.js
+NEXT_PUBLIC_SITE_URL="https://your-vercel-domain.vercel.app"
