--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,56 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# --- Node & package managers ---
+node_modules/
+.pnpm-store/
+.npm/
+.yarn/
+.bun/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
+# --- Next.js build output ---
+.next/
+out/
+dist/
+.cache/
 
-# yarn
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files
+# --- Environment variables (keep only example) ---
 .env
-.env.*
+.env.local
+.env.development
+.env.production
+.env.test
+.env.*.local
 !.env.example
 
-# vercel
-.vercel
+# --- Logs ---
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+*.log
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# --- Vercel ---
+.vercel/
 
-# prisma (如果你以后用本地 sqlite，可以在这里加 dev.db)
-/prisma/dev.db
-/prisma/dev.db-journal
+# --- Coverage / tests ---
+coverage/
+.junit/
 
-# prisma generated client（如果你开启了自定义输出目录）
-/app/generated/prisma
+# --- OS / Editor junk ---
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+.idea/
+.vscode/
+*.iml
 
-# temp archives / others
-project.zip
-*.tmp
-*.temp
-*.bak
+# --- Archives / exports ---
+*.zip
+*.tar
+*.tar.gz
+*.tgz
+
+# --- Images cache / uploads (如果有本地临时上传目录，可打开) ---
+ public/uploads/
+ tmp/
+
+# --- Prisma (只忽略生成的客户端目录；schema 和 migrations 要提交) ---
+ prisma/generated/
