--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,10 @@ ADMIN_EMAIL="admin@example.com"
 ADMIN_PASSWORD="secure-password-here"
 
 # Email provider (例如 Resend，用到再开)
+ADMIN_API_TOKEN="your-admin-api-token"
  RESEND_API_KEY="your-resend-api-key"
  RESEND_FROM_EMAIL="admin@example.com"
+
 
  # Next.js
 NEXT_PUBLIC_SITE_URL="https://your-vercel-domain.vercel.app"
