--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^3.0.3",
     "jose": "^6.1.3",
-    "next": "14.2.5",
+    "next": "14.2.34",
     "pg": "^8.16.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "resend": "^6.6.0",
+    "stripe": "^20.0.0",
     "swr": "^2.3.7"
   },
   "devDependencies": {
