feat(payment): hitpay closure + webhook idempotency + migrations (build pass)

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
-# Database connection (Neon / Postgres)
-DATABASE_URL="postgresql://user:password@host:5432/dbname?sslmode=require"
+# Database
+DATABASE_URL="postgresql://USER:PASSWORD@HOST:5432/DB?sslmode=require"
 
-# Auth / Admin related
-AUTH_SECRET="change-me-in-real-env"
+# App
+APP_BASE_URL="https://your-domain.vercel.app"
 
-ADMIN_EMAIL="admin@example.com"
-ADMIN_PASSWORD="secure-password-here"
+# HitPay
+# Sandbox: https://api.sandbox.hit-pay.com
+# Production: https://api.hit-pay.com
+HITPAY_API_BASE_URL="https://api.sandbox.hit-pay.com"
+HITPAY_API_KEY="REPLACE_ME"
+HITPAY_SALT="REPLACE_ME"
 
-# Email provider (例如 Resend，用到再开)
-ADMIN_API_TOKEN="your-admin-api-token"
- RESEND_API_KEY="your-resend-api-key"
- RESEND_FROM_EMAIL="admin@example.com"
-
-
- # Next.js
-NEXT_PUBLIC_SITE_URL="https://your-vercel-domain.vercel.app"
+# Admin/Auth
+AUTH_SECRET="REPLACE_ME_LONG_RANDOM"
+ADMIN_EMAIL="admin@your-domain.com"
+ADMIN_PASSWORD="REPLACE_ME_STRONG_PASSWORD"
