--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "seed": "node prisma/seed.mjs"
   },
   "dependencies": {
-    "@prisma/adapter-pg": "^7.1.0",
-    "@prisma/client": "^7.1.0",
+    "@prisma/adapter-pg": "7.1.0",
+    "@prisma/client": "7.1.0",
     "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^3.0.3",
     "jose": "^6.1.3",
-    "next": "^14.2.35",
+    "next": "14.2.35",
     "pg": "^8.16.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -31,19 +31,18 @@
     "swr": "^2.3.7"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.2.35",
-    "@types/bcryptjs": "^3.0.0",
+    "@next/eslint-plugin-next": "14.2.35",
     "@types/json5": "^2.2.0",
     "@types/node": "24.10.1",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
-    "eslint-config-next": "^14.2.35",
+    "eslint-config-next": "14.2.35",
     "postcss": "8.4.38",
-    "prisma": "^7.1.0",
+    "prisma": "7.1.0",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.4"
   },
   "overrides": {
-    "glob": "10.5.0"
+    "glob": "^10.5.0"
   }
 }
