--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,20 @@
 ############################################################
 # Database
 ############################################################
-DATABASE_URL="postgresql://USER:PASSWORD@HOST:5432/DB?sslmode=require"
+DATABASE_URL="postgresql://USER:PASSWORD@HOST/DATABASE?sslmode=require"
 
 ############################################################
-# Site Base URL (用于拼 redirect_url / webhookUrl)
-# 二选一即可：建议用 NEXT_PUBLIC_SITE_URL
+# Admin/Auth
 ############################################################
-NEXT_PUBLIC_SITE_URL="https://your-domain.vercel.app"
-# APP_BASE_URL="https://your-domain.vercel.app"
+ADMIN_JWT_SECRET="change-this-to-a-long-random-secret"
 
 ############################################################
-# HitPay
-# Sandbox: https://api.sandbox.hit-pay.com
-# Production: https://api.hit-pay.com
+# Payments (Optional)
 ############################################################
-HITPAY_API_BASE_URL="https://api.sandbox.hit-pay.com"
-HITPAY_API_KEY="REPLACE_ME"
-HITPAY_SALT="REPLACE_ME"
+STRIPE_SECRET_KEY="sk_test_***"
 
 ############################################################
-# Email (Resend)
+# Email (Optional)
 ############################################################
-RESEND_API_KEY="REPLACE_ME"
-RESEND_FROM_EMAIL="booking@yourdomain.com"
-
-############################################################
-# Auth / Admin
-############################################################
-AUTH_SECRET="REPLACE_ME_LONG_RANDOM"
-ADMIN_EMAIL="admin@yourdomain.com"
-ADMIN_PASSWORD="REPLACE_ME_STRONG_PASSWORD"
-EOF
+RESEND_API_KEY="re_***"
+RESEND_FROM_EMAIL="booking@your-domain.com"
