feat: force FPX via payment_methods + webhook PAID + robust redirect

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,18 @@ DATABASE_URL="postgresql://USER:PASSWORD@HOST/DATABASE?sslmode=require"
 ADMIN_JWT_SECRET="change-this-to-a-long-random-secret"
 
 ############################################################
+# HitPay (FPX)
+############################################################
+APP_BASE_URL="https://walterfarm.vercel.app"
+
+HITPAY_API_BASE_URL="https://api.hit-pay.com"
+HITPAY_API_KEY="hp_live_***"
+HITPAY_SALT="***"
+
+# Force payment methods: FPX (if your account supports the code "fpx")
+HITPAY_PAYMENT_METHODS="fpx"
+
+############################################################
 # Payments (Optional)
 ############################################################
 STRIPE_SECRET_KEY="sk_test_***"
